syntax = "proto3";

package kore.v1;

option go_package = "kore/libs/proto/v1;v1";

import "third_party/google/api/annotations.proto";
import "libs/proto/v1/reply.proto";

message Token {
  string loginId = 1;
  string accessToken = 2;
  int64 expiredTime = 3;
}

service Authorization {
  rpc Login (LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/login"
      body: "*"
    };
  }

  rpc Logout (LogoutRequest) returns (DefaultReply) {
    option (google.api.http) = {
      post: "/logout"
      body: "*"
    };
  }
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginReply {
  Token token = 1;
}

message LogoutRequest {
  string loginId = 1;
  string accessToken = 2;
}
